# HomeAssistantEntities

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  idf_component.yml  library.json  library.properties
.github/workflows/: arduino_cli.yaml  esp_upload_component.yaml  espidf.yaml  espidf4.yaml  espidf5.yaml  platformio.yaml  platformio_publish.yaml  test.yaml
examples/Actuators/: Actuators.ino
examples/Multiple/: Multiple.ino
examples/Sensors/: Sensors.ino
examples/Simple/: Light.ino
src/: HaBridge.cpp  HaBridge.h  HaEntity.h  HaEntityAtmosphericPressure.cpp  HaEntityAtmosphericPressure.h  HaEntityBrightness.h  HaEntityCurtain.h  HaEntityDoor.cpp  HaEntityDoor.h  HaEntityHumidity.cpp  HaEntityHumidity.h  HaEntityJson.h  HaEntityLight.cpp  HaEntityLight.h  HaEntityLock.cpp  HaEntityLock.h  HaEntityMotion.h  HaEntityRetries.cpp  HaEntityRetries.h  HaEntitySound.h  HaEntitySwitch.h  HaEntityTemperature.cpp  HaEntityTemperature.h  HaEntityVoltage.h  HaEntityWeight.h  HaUtilities.h  IJson.h  IMQTTRemote.h
src/entities/: AttributeVariants.cpp  AttributeVariants.h  HaDeviceClasses.h  HaEntityAtmosphericPressure.cpp  HaEntityAtmosphericPressure.h  HaEntityBoolean.cpp  HaEntityBoolean.h  HaEntityBrightness.cpp  HaEntityBrightness.h  HaEntityButton.cpp  HaEntityButton.h  HaEntityCarbonDioxide.h  HaEntityCover.cpp  HaEntityCover.h  HaEntityCurrent.h  HaEntityCurtain.cpp  HaEntityCurtain.h  HaEntityDeviceTrigger.cpp  HaEntityDeviceTrigger.h  HaEntityDoor.cpp  HaEntityDoor.h  HaEntityEvent.cpp  HaEntityEvent.h  HaEntityFan.cpp  HaEntityFan.h  HaEntityHumidity.cpp  (+36 more)
(+11 files in other folders)
